[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://View.tscn" type="PackedScene" id=3]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" parent="CanvasLayer" instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -224.0
margin_right = 0.0
margin_bottom = 0.0
custom_constants/separation = 10

[node name="Play" parent="CanvasLayer/HBoxContainer" index="0"]
margin_left = 100.0
margin_right = 324.0

[node name="Play2" parent="CanvasLayer/HBoxContainer" index="1"]
margin_left = 334.0
margin_right = 557.0

[node name="Play3" parent="CanvasLayer/HBoxContainer" index="2"]
margin_left = 567.0
margin_right = 791.0

[node name="Play4" parent="CanvasLayer/HBoxContainer" index="3"]
margin_left = 801.0
margin_right = 1024.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 4500.0
margin_bottom = 2212.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="View" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1125.0
margin_bottom = 2212.0
color = Color( 0.560784, 0.227451, 0.227451, 1 )

[node name="View2" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1125.0
margin_right = 2250.0
margin_bottom = 2212.0
color = Color( 0.160784, 0.631373, 0.368627, 1 )

[node name="View3" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2250.0
margin_right = 3375.0
margin_bottom = 2212.0
color = Color( 0.298039, 0.152941, 0.266667, 1 )

[node name="View4" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3375.0
margin_right = 4500.0
margin_bottom = 2212.0
color = Color( 0.74902, 0.462745, 0.184314, 1 )

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 2212.0
margin_right = 4500.0
margin_bottom = 2436.0
rect_min_size = Vector2( 1125, 224 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 1.0
drag_margin_left = 0.0
drag_margin_right = 0.0

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Play" to="." method="_on_Play_pressed" binds= [ 0 ]]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Play2" to="." method="_on_Play_pressed" binds= [ 1 ]]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Play3" to="." method="_on_Play_pressed" binds= [ 2 ]]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Play4" to="." method="_on_Play_pressed" binds= [ 3 ]]
[connection signal="drag" from="VBoxContainer/HBoxContainer/View" to="." method="_on_View_drag"]
[connection signal="release" from="VBoxContainer/HBoxContainer/View" to="." method="_on_View_release"]
[connection signal="drag" from="VBoxContainer/HBoxContainer/View2" to="." method="_on_View_drag"]
[connection signal="release" from="VBoxContainer/HBoxContainer/View2" to="." method="_on_View_release"]
[connection signal="drag" from="VBoxContainer/HBoxContainer/View3" to="." method="_on_View_drag"]
[connection signal="release" from="VBoxContainer/HBoxContainer/View3" to="." method="_on_View_release"]
[connection signal="drag" from="VBoxContainer/HBoxContainer/View4" to="." method="_on_View_drag"]
[connection signal="release" from="VBoxContainer/HBoxContainer/View4" to="." method="_on_View_release"]

[editable path="CanvasLayer/HBoxContainer"]
